--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ repositories {
 
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+	
+	// https://mvnrepository.com/artifact/com.google.guava/guava
+	compile group: 'com.google.guava', name: 'guava', version: '19.0'
+	
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
