--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,22 @@ repositories {
 
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+	//这三个库是必须的
+	compile group: 'org.slf4j', name: 'slf4j-api',version:'1.7.+'
+	compile 'ch.qos.logback:logback-classic:1.1.7'
+	compile 'ch.qos.logback:logback-core:1.1.7'
 	
 	// https://mvnrepository.com/artifact/com.google.guava/guava
 	compile group: 'com.google.guava', name: 'guava', version: '19.0'
 	
     testCompile group: 'junit', name: 'junit', version: '4.+'
+}
+
+
+configurations {
+	//重要。实际使用中，如果没有下面两行配置，则roll-over时，active log会发生改变。
+	compile.exclude module: 'log4j'
+	compile.exclude module: 'slf4j-log4j12'
 }
 
 test {
